@@ -29,7 +29,6 @@
 
 #import "CCAtlasNode.h"
 #import "CCSpriteSheet.h"
-#import "Support/ccArray.h"
 
 
 @class CCTMXLayer;
